feat add contact history